# fermion-bag-HLFT

./: README.md
cpp/: .gitignore  CMakeLists.txt  README  main.cpp
cpp/algorithms/: README.md
cpp/core/: README.md
cpp/docker/: Dockerfile  README.md
cpp/docs/src/: main.tex
cpp/docs/src/sections/: 01_introduction.tex  02_theory.tex  03_software_overview.tex  04_installation.tex  05_input.tex  06_output.tex  07_physics_implementation.tex  07_physics_implementations.tex  08_extending.tex  09_testing.tex  10_examples.tex  11_appendices.tex
cpp/scripts/: README.md
cpp/scripts/analysis/determinant_analysis/: compute_det.py
cpp/scripts/analysis/nBonds_analysis/: README.md  analyze_nBonds.py  compile_nBonds_data.sh
cpp/scripts/docker/: entrypoint.sh
cpp/scripts/examples/: README.md  input_example.yaml
cpp/scripts/examples/honeycomb/: tV-HC.yaml
cpp/scripts/examples/simple-cubic/: tV-1D.yaml  tV-2D.yaml  tV-3D.yaml
cpp/scripts/run/: sample_run.sh
cpp/scripts/run/docker/: docker_run.sh
cpp/scripts/run/input/: create_input.sh  random.sh
cpp/scripts/run/parameter_sweep/: run_param_sweep.sh
cpp/src/: CMakeLists.txt  main.cpp  test.cpp
cpp/src/algorithms/: CMakeLists.txt  dummy.cpp
cpp/src/configuration/: Bond.cpp  Bond.hpp  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Lattice.cpp  Lattice.hpp
cpp/src/control/: CMakeLists.txt  Driver.cpp  Driver.hpp  Sweep.cpp  Sweep.hpp  Update.cpp  Update.hpp
cpp/src/hamiltonians/: CMakeLists.txt  HamiltonianBase.cpp  HamiltonianBase.hpp  README.md  Random.cpp  Random.hpp  RandomNEW.cpp  RandomNEW.hpp  TVModel.cpp  TVModel.hpp  TVModelNEW.cpp  TVModelNEW.hpp  dummy.cpp
cpp/src/io/: CMakeLists.txt  Input.hpp  InputParser.cpp  InputParser.hpp  Output.cpp  Output.hpp
cpp/src/lattices/: CMakeLists.txt  Honeycomb.cpp  Honeycomb.hpp  LatticeBase.hpp  LatticeHolder.hpp  README.md  SimpleCubic.cpp  SimpleCubic.hpp
cpp/src/models/: CMakeLists.txt  README.md  dummy.cpp
cpp/src/tests/: CMakeLists.txt  README.md  tests_main.cpp
cpp/src/tests/algorithms/: CMakeLists.txt
cpp/src/tests/configuration/: BondTests.cpp  CMakeLists.txt  ConfigurationTests.cpp  InputTests.cpp  LatticeTests.cpp
cpp/src/tests/hamiltonians/: CMakeLists.txt  dummy.cpp
cpp/src/tests/io/: CMakeLists.txt  InputTests.cpp
cpp/src/tests/models/: CMakeLists.txt
cpp/src/tests/utils/: CMakeLists.txt
cpp/src/utils/: CMakeLists.txt  Constants.hpp  EnumHelpers.hpp  README.md  RandomHelpers.hpp  YAMLHelpers.hpp  dummy.cpp
